# ChangeLog for xfce-base/xfce4-session
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.181 2013/05/05 16:55:45 ssuominen Exp $

*xfce4-session-4.10.1 (05 May 2013)

  05 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-session-4.10.1.ebuild:
  Version bump.

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for sparc, wrt bug #465286

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for ia64, wrt bug #465286

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for arm, wrt bug #465286

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for alpha, wrt bug #465286

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for ppc64, wrt bug #465286

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for ppc, wrt bug #465286

  11 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for x86, wrt bug #465286

  11 Apr 2013; Agostino Sarubbo <ago@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for amd64, wrt bug #465286

  10 Apr 2013; Jeroen Roovers <jer@gentoo.org> xfce4-session-4.10.0-r1.ebuild:
  Stable for HPPA (bug #465286).

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-session-4.10.0.ebuild, xfce4-session-4.10.0-r1.ebuild:
  EAPI5

*xfce4-session-4.10.0-r1 (16 Nov 2012)

  16 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-session-4.10.0-r1.ebuild,
  +files/xfce4-session-4.10.0-multiple-interactive-session-save.patch:
  Backport upstream patch for "handle multiple interactive session save" wrt
  #443504 by "Beelzebubbie"

  09 Sep 2012; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-session-4.8.2.ebuild, -xfce4-session-4.8.3-r1.ebuild,