@@ -5,18 +5,17 @@ AUX xfce4-session-4.10.0-multiple-interactive-session-save.patch 6032 SHA256 b74
 DIST xfce4-session-4.10.0.tar.bz2 1257385 SHA256 bb8aa9a74c3d382840596fb4875144d66c7f3f47c8e9ee81d31e3428a72c46ce SHA512 d8d8d7c6c764182e8477d87d3c0d30ea4988e34c3411ffa15901b07738671960c1e62c02c05c45724890cec063f1a5aeeb04ab8b48992917ebfe1975165e969c WHIRLPOOL 21919865dbd9ef9bf3782586d6f2e089860cd21c3a4caad48e75afb0cb139119a8d7c151975466a9b3fd6cb57fc7711f2ec5dad142bc1c14287758577e8081f8
 DIST xfce4-session-4.10.1.tar.bz2 1273015 SHA256 0154fabdc398798c3445374ccc52a2f5bcb2d867fc94bc54114395b24f9cfc83 SHA512 4c6931c350957107fc13f244748287141d524a0e954f48935b5dac2c46a8125af702e1164af98414644f9ea51f5a952db6c57a96fe2a51cab21b616381aac015 WHIRLPOOL fb6193b4d769fb0cd5461a925538bbfa9224b31209d3d16b8bef2f81cbf29aa4cf1c56373335b27326cc2a9f8905a11eec975ee7bc2068168b39e06cd08e64fa
 EBUILD xfce4-session-4.10.0-r1.ebuild 1882 SHA256 1e1844cd967220a0b9f4ffef47346fb1cca53b8b7f814bc116392271fa4efc98 SHA512 5ab362daba3727b9e3f1c3914dc52ecb045947baa07bba391692cbda092fd72ac94e8791121eaa7904ecd51ff186d7030f8684fbe03254ec5fd8a1381419adee WHIRLPOOL ce1231a0434cfbc0ee15bf1b2b58b4491cd0815ba802473e1a0afe9a0b3a29b3357399f691078735ce5e27c59fe70056e10291f2007f025b5401f600fe9d0fd7
-EBUILD xfce4-session-4.10.0.ebuild 1812 SHA256 32e508717e554b33aa632f209056f984a2ecf10564c8577443637b4e59d3d214 SHA512 d454f573cff32b7fa197909fc9032e0771bbdd08cea7e508939a72892bb44c01f702754e43b26ed90b7de740cfb990556451920f5d56464b26c22c33b4f92e4e WHIRLPOOL 84144ac2422831e3bf50fab33896b74fb549f8f31a988f65fa36140b8c1843ff5fc6786cfdcb5d5455ee4683f3f1062233b1a65faf8d127a0166c2e29ad47306
 EBUILD xfce4-session-4.10.1.ebuild 1661 SHA256 f9ba82c031b96e593765fe79beb8be294c1dbd39afd9a5b1b51086a57b56bd6b SHA512 6405b8ae232c06f8091593c6253b74bcd95d3fe3693ff997542faa2d0d46093761cd049cdccc637509e9aad39ddae9634d3312c433f7c5370e7eee4c027497d9 WHIRLPOOL c9f19a84227d0e893095cf239b5058602065bc8a48206eea327188924a993550800fa03278f362dbf22aab905d8533ab75c6d49484d2eb9efd208ecc2239062c
-MISC ChangeLog 24142 SHA256 45fc4ee5d58133c414e966b94906f627d7367e7ecbb9984647902a7aafac56aa SHA512 80e1fece3d80ff76db83a576969c6e1d7f7037488fae8f86d5c9f885b5eeb63948dfe67964daaafd5adfee11895fa47e92c474f7f67c6dfa852896f88cfb45aa WHIRLPOOL bf56426772cd4f7e60b78e360d5f2bbe603cd0d95ca97a5a28fcc4fa43396eb3fb0863fc37a97d9f072181563c35a414847737607ccf683be70faefc0a39330a
+MISC ChangeLog 24235 SHA256 4be4799f4de6c36c7610eb3739e3196634e8fe45fd373d70b5f03412bb4ec7e8 SHA512 9a1fa70d6ab250a22564294ec6637e99aa64204944b15d6bd566cc21eaeb15471a523b5ca6e9a95351fb921df0d8588777865180ebb35c627ba9118f71c804af WHIRLPOOL bec8d9d7f0f1ecd058213d0450cfe89964da2c1ea8882ea3d42bf664da2597c668bbe0bed056604cb8f668da9ee7dcc95c69ca1d92e05c9c257fa71374ce566b
 MISC metadata.xml 390 SHA256 1d122a4418cea15fd68cb18d3c1b6db5120ac2109f228fbf6805967d9cb1431c SHA512 662e0dc55e20f785d376ce74919c280af92ddd43b61eca9eb364e736b76c854427b8d87e392eaa54576073c44f074939789d86b28cbf4eb5515ba1f1f4b8554e WHIRLPOOL 95207640f5dad56c4129aaa9c947e668f4b8617919e27b1471be644fc6f56fed264740f37b92e63a8af0594ee63b0089a37d33c81496a0b7679be8389ba0a3cc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRho8CAAoJEEdUh39IaPFNhpYH/2L+xkoGlefQT5PrDbHOfNVp
-IqTtdRy3m9GFzzyHjgXEjeNR69I1XLKphJW8/VD4E56192iX4DC0RcT/+y4b0rUo
-SMZP/esSgiNt0XHcR1EY/oTdNcCIX3kARIoUMxat+bPT4ZQbX2LMlOUb1edh9kh2
-yc2BfsQzlWm3I3ZPPZfGNP/A2HIZP/as3pFcrKjrCoKkT4PHoCrPWvKDqhdZfiVw
-B57F8YDU69f3fXU57dMpikTwqaOacvnOr06LCudg3ohnSh6TB6ziw5uOszo0aSHM
-dZl/74ohyiqD871Yydc9hL/2++WkNUYYrgE4MmuYOfQHaMsxqYEtqj0sbqOJNe0=
-=r/tz
+iQEcBAEBCAAGBQJRho88AAoJEEdUh39IaPFNC8MH/iZdyTQOXbwPW8JRL21cJXRn
+OADBZwVcyjL1tHK5loQeo6MjXopwsxJ1e9E5lQg8YAuznQzyJXR3oaTzWS53C099
+AtVAeNydxZjg36QFsoROFU0CxmMMdeO/41kFE9i2O/enaz8U+oDpwkgMwqRdYqJX
+U/yZxf5hL9Pkk2d/WPAPiF3wJLkGPFKLi0dF5z9nA8C7shlzh8Mq9nhN0fUYbOKQ
+3xX+Dw9VLYFfVlZsy4KkBoPOqG1pxxCApIeLz6dwZ/0Di5NML1MoVKzctXcUbENY
+jJLixH7y0vE8/gHnFXuCTiM7Vq2Vw4yX/wJpthaDu/hwgEQJF/iMlhHsSlYwNbQ=
+=oO5T
 -----END PGP SIGNATURE-----
