@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce4-session
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.181 2013/05/05 16:55:45 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-session/ChangeLog,v 1.182 2013/05/05 16:56:44 ssuominen Exp $
+
+  05 May 2013; Samuli Suominen <ssuominen@gentoo.org>
+  -xfce4-session-4.10.0.ebuild:
+  old
 
 *xfce4-session-4.10.1 (05 May 2013)
 
